# model-context-protocol-samples

./: .gitignore  README.md
cli/cli_github/: auto_clone.sh
explain_opensources/browser-tools-mcp/: README.md
explain_opensources/crystaldba/postgres-mcp/: README.md  get_started.md
explain_opensources/modelcontextprotocol/: releases.md
explain_opensources/modelcontextprotocol/python-sdk/: README.md
explain_opensources/modelcontextprotocol/python-sdk/src/mcp/: types.md
explain_opensources/modelcontextprotocol/servers/: README.md
explain_opensources/modelcontextprotocol/typescript-sdk/: README.md
learn_mcp/: marketplace.md
learn_mcp/websites/: modelcontextprotocol_io.md
learn_mcp/websites/modelcontextprotocol_io/: discussions.md  documentation.md  roadmap.md  specification.md
learn_mcp/youtube/: yt_1.md  yt_2.md  yt_3.md
learn_more/: anyio.md  pipx.md  pydantic.md  pyproject.md  python.md  starlette.md  transport.md  uv.md
samples/: README.md
samples/local_related/mcp_servers/mcp_server_git/: Dockerfile  README.md  pyproject.toml
samples/local_related/mcp_servers/mcp_server_git/src/mcp_server_git/: functions.py  models.py
samples/mcp_servers/: README.md
samples/mcp_servers/mcp-server-git/: README.md
samples/mcp_servers/mcp-server-git/src/mcp-server-git/: main.py  server.py
samples/mcp_servers/mcp-server-postgresql/: README.md  pyproject.toml
samples/mcp_servers/mcp_server_git/src/mcp_server_git/: enums.py  (+2 more)
technical_questions/: question_1.md  question_2.md  question_3.md  question_4.md  question_5.md  question_6.md  question_7.md
(+20 files in other folders)
